# mcp_grinder_server

./: .gitignore  appspec.yml  pyproject.toml
.github/codeql/custom_queries/: qlpack.yml
.github/codeql/custom_queries/queries/: commandinjection.ql  custom_taint_traking.ql
.github/workflows/: ci.yml  codeql.yml  deploy.yml  python-app.yml
mcp_grinder_server/: pass_mod.py  server.py  sink_mod.py  source_mod.py  taint_tracking_test.py
mcp_grinder_server/test/: test_server.py
scripts/: after-install.sh  application-start.sh  before-install.sh
