[project]
name = "mcp-grinder-server"
version = "0.1.0"
description = "MCP Grinder Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "pytest>=8.4.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.5.2"
]

[project.scripts]
mcp-grinder-server = "mcp_grinder_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_grinder_server"]
